--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -1,6 +1,19 @@
+// variaveis sass
 $cor-destaque: rgb(223, 92, 32);
 $cor-auxiliar: #1e2c35;
 $cor-branca: #fff;
+
+// mixin é como uma função
+@mixin borda-arredondada ($raio: 0.3em)
+{
+	-webkit-border-radius: $raio;
+	border-radius: $raio;
+}
+@mixin sombra-padrao
+{
+	-webkit-box-shadow: 0 2px 6.65px 0.35px rgba(0, 0, 0, 0.3);
+	box-shadow: 0 2px 6.65px 0.35px rgba(0, 0, 0, 0.3);
+}
 
 /** Geral **/
 body {
@@ -99,9 +112,8 @@ header .container {
   border: 0;
   padding: .6em;
   font-size: 1.2em;
-  -webkit-border-radius: 0.3em;
-  border-radius: 0.3em;
-  box-shadow: 0 2px 6.65px 0.35px rgba(0, 0, 0, 0.3);
+  @include borda-arredondada(50px);
+  @include sombra-padrao;
   font-weight: bold;
 }
 
@@ -225,9 +237,8 @@ header .container {
   width: 210px;
   height: 38px;
   font-size: 1.2em;
-  -webkit-border-radius: 0.3em;
-  border-radius: 0.3em;
-  box-shadow: 0 2px 6.65px 0.35px rgba(0, 0, 0, 0.3);
+  @include borda-arredondada;
+  @include sombra-padrao;
   margin-left: 2em;
 }
 
@@ -310,8 +321,7 @@ textarea {
   width: 100%;
   margin-bottom: .8em;
   padding: 4px 8px;
-  -webkit-border-radius: 0.3em;
-  border-radius: 0.3em;
+  @include borda-arredondada;
   border: 2px solid #ccc;
 }
 
@@ -323,9 +333,8 @@ textarea {
   width: 210px;
   height: 38px;
   font-size: 1.2em;
-  -webkit-border-radius: 0.3em;
-  border-radius: 0.3em;
-  box-shadow: 0 2px 6.65px 0.35px rgba(0, 0, 0, 0.3);
+  @include borda-arredondada;
+  @include sombra-padrao;
 }
 
 /** Footer **/
