using colors functon sass 'darken' and 'lighten'

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -380,8 +380,8 @@ h2 {
 
 /** Header **/
 header {
-  border-top: 5px solid #df5c20;
-  background: rgba(30, 44, 53, 0.8);
+  border-top: 5px solid #863713;
+  background: rgba(48, 71, 86, 0.8);
   height: 90px;
   width: 100%;
   position: absolute; }
@@ -425,7 +425,7 @@ header .container {
       font-weight: bold; }
   .destaque button {
     margin-top: 1em;
-    background: #df5c20;
+    background: #863713;
     border: 0;
     padding: .6em;
     font-size: 1.2em;
@@ -473,7 +473,7 @@ header .container {
 
 /** Planos **/
 .planos {
-  background: #1e2c35; }
+  background: #304756; }
   .planos h2 {
     color: #fff; }
 
@@ -488,17 +488,17 @@ header .container {
   .plano h3 {
     color: #fff;
     font-size: 1.8em;
-    background: #df5c20;
+    background: #863713;
     text-align: center;
     height: 2em;
     padding-top: .6em;
     margin-top: 0; }
   .plano div {
     text-align: center;
-    color: #df5c20;
+    color: #863713;
     font-size: 2.75em; }
   .plano button {
-    background: #df5c20;
+    background: #863713;
     border: 0;
     color: #fff;
     width: 210px;
@@ -594,7 +594,7 @@ textarea {
 
 .contato button {
   margin: 0 auto;
-  background: #df5c20;
+  background: #863713;
   border: 0;
   color: #fff;
   width: 210px;
@@ -623,7 +623,7 @@ footer::after {
 
 footer::before {
   content: "";
-  background: #1e2c35;
+  background: #304756;
   top: 0;
   left: 0;
   bottom: 0;
