--- a/css/helpers/variaveis.scss
+++ b/css/helpers/variaveis.scss
@@ -1,4 +1,4 @@
 // variaveis sass
-$cor-destaque: rgb(223, 92, 32);
-$cor-auxiliar: #1e2c35;
+$cor-destaque: darken(rgb(223, 92, 32), 20);
+$cor-auxiliar: lighten(#1e2c35, 10);
 $cor-branca: #fff;
