--- a/css/helpers/mixin.scss
+++ b/css/helpers/mixin.scss
@@ -4,8 +4,11 @@
 	-webkit-border-radius: $raio;
 	border-radius: $raio;
 }
-@mixin sombra-padrao
+
+// Estou dizendo que sombra-padrão é um placeholder, quando ele for invocado no código usando o @extends ele não replicará o código
+%sombra-padrao
 {
 	-webkit-box-shadow: 0 2px 6.65px 0.35px rgba(0, 0, 0, 0.3);
 	box-shadow: 0 2px 6.65px 0.35px rgba(0, 0, 0, 0.3);
 }
+
