--- a/css/layout/destaque.scss
+++ b/css/layout/destaque.scss
@@ -29,7 +29,7 @@
 		padding: .6em;
 		font-size: 1.2em;
 		@include borda-arredondada(50px);
-		@include sombra-padrao;
+		@extend %sombra-padrao;
 		font-weight: bold;
 	}
   
