--- a/css/helpers/variaveis.scss
+++ b/css/helpers/variaveis.scss
@@ -2,3 +2,6 @@
 $cor-destaque: darken(rgb(223, 92, 32), 20);
 $cor-auxiliar: lighten(#1e2c35, 10);
 $cor-branca: #fff;
+
+//$ponto-de-quebra: 980px;
+$mq-mobile: "(max-width: 980px)";
